--- a/src/pages/LandingPage/components/ContactSection/ContactSection.css
+++ b/src/pages/LandingPage/components/ContactSection/ContactSection.css
@@ -2,6 +2,7 @@
 
 .lp-13-section {
   width: 100%;
+  margin-left: 50px;
   min-height: 734px;
   display: flex;
   align-items: center;
@@ -141,6 +142,7 @@
 /* Responsive Design */
 @media (max-width: 1440px) {
   .lp-13-container {
+    margin-left: 120px;
     padding: 0 120px;
     gap: 70px;
   }
