--- a/src/pages/LandingPage/components/DirectContractSection/DirectContractSection.css
+++ b/src/pages/LandingPage/components/DirectContractSection/DirectContractSection.css
@@ -2,6 +2,7 @@
 .lp-5-section {
   background: #FFFFFF;
   padding-top: 64px;
+  margin-left: 50px;
 }
 
 .lp-5-container {
@@ -209,6 +210,7 @@
 /* Responsive */
 @media (max-width: 1440px) {
   .lp-5-container {
+    margin-left: 120px;
     padding: 0 80px;
   }
 }
