--- a/src/pages/LandingPage/components/DisputeSection/DisputeSection.css
+++ b/src/pages/LandingPage/components/DisputeSection/DisputeSection.css
@@ -4,6 +4,7 @@
   width: 100%;
   min-height: 100vh;
   display: flex;
+  margin-left: 50px;
   align-items: center;
   justify-content: center;
   background: white;
@@ -348,6 +349,7 @@
 /* Responsive Design */
 @media (max-width: 1440px) {
   .lp-7-container {
+    margin-left: 120px;
     padding: 0 120px;
     gap: 70px;
   }
