--- a/src/pages/LandingPage/components/GovernanceSection/GovernanceSection.css
+++ b/src/pages/LandingPage/components/GovernanceSection/GovernanceSection.css
@@ -4,6 +4,7 @@
   width: 100%;
   min-height: 734px;
   display: flex;
+  margin-left: 50px;
   align-items: center;
   justify-content: center;
   background: white;
@@ -180,6 +181,7 @@
 /* Responsive Design */
 @media (max-width: 1440px) {
   .lp-9-container {
+    margin-left: 120px;
     padding: 0 120px;
     gap: 70px;
   }
