--- a/src/pages/LandingPage/components/RevolutionSection/RevolutionSection.css
+++ b/src/pages/LandingPage/components/RevolutionSection/RevolutionSection.css
@@ -3,6 +3,7 @@
 .lp-12-section {
   width: 100%;
   min-height: 734px;
+  margin-left: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -128,6 +129,7 @@
 /* Responsive Design */
 @media (max-width: 1440px) {
   .lp-12-container {
+    margin-left: 120px;
     padding: 0 120px;
     gap: 70px;
   }
