--- a/src/pages/LandingPage/components/EarnTokenSection/EarnTokenSection.css
+++ b/src/pages/LandingPage/components/EarnTokenSection/EarnTokenSection.css
@@ -4,7 +4,7 @@
   width: 100%;
   min-height: 734px;
   display: flex;
-  margin-left: 50px;
+  /* margin-left: 50px; */
   align-items: center;
   justify-content: center;
   background: white;
@@ -283,7 +283,7 @@
 /* Responsive Design */
 @media (max-width: 1440px) {
   .lp-8-container {
-    margin-left: 120px;
+    /* margin-left: 120px; */
     padding: 0 120px;
     gap: 70px;
   }
@@ -305,6 +305,7 @@
 
 @media (max-width: 1024px) {
   .lp-8-container {
+    /* margin-left: -80px; */
     padding: 0 80px;
     gap: 50px;
     flex-direction: column;
