--- a/src/pages/LandingPage/components/GovernanceSection/GovernanceSection.css
+++ b/src/pages/LandingPage/components/GovernanceSection/GovernanceSection.css
@@ -4,7 +4,7 @@
   width: 100%;
   min-height: 734px;
   display: flex;
-  margin-left: 50px;
+  /* margin-left: 50px; */
   align-items: center;
   justify-content: center;
   background: white;
@@ -181,7 +181,7 @@
 /* Responsive Design */
 @media (max-width: 1440px) {
   .lp-9-container {
-    margin-left: 120px;
+    /* margin-left: 120px; */
     padding: 0 120px;
     gap: 70px;
   }
@@ -203,6 +203,7 @@
 
 @media (max-width: 1024px) {
   .lp-9-container {
+    /* margin-left: -80px; */
     padding: 0 80px;
     gap: 50px;
     flex-direction: column;
@@ -226,6 +227,7 @@
   }
 
   .lp-9-circle-container {
+    margin-left: -80px;
     width: 100%;
     max-width: 460px;
     height: 420px;
