--- a/src/pages/LandingPage/components/LedgerSection/LedgerSection.css
+++ b/src/pages/LandingPage/components/LedgerSection/LedgerSection.css
@@ -1,7 +1,7 @@
 /* Ledger Section (LP-3) */
 .lp-3-section {
   background: #FFFFFF;
-  margin-left: 50px;
+  /* margin-left: 50px; */
   padding-top: 64px;
 }
 
@@ -59,13 +59,14 @@
 /* Responsive */
 @media (max-width: 1440px) {
   .lp-3-container {
-    margin-left:120px;
+    /* margin-left:120px; */
     padding: 0 80px;
   }
 }
 
 @media (max-width: 1024px) {
   .lp-3-container {
+    /* margin-left: 140px; */
     flex-direction: column;
     gap: 60px;
     padding: 0 40px;
