--- a/src/pages/LandingPage/components/PostJobSection/PostJobSection.css
+++ b/src/pages/LandingPage/components/PostJobSection/PostJobSection.css
@@ -2,7 +2,7 @@
 .lp-4-section {
   background: #FFFFFF;
   padding-top: 64px;
-  margin-left: 50px;
+  /* margin-left: 50px; */
 }
 
 .lp-4-container {
@@ -53,13 +53,14 @@
 /* Responsive */
 @media (max-width: 1440px) {
   .lp-4-container {
-    margin-left: 120px;
+    /* margin-left: 120px; */
     padding: 0 80px;
   }
 }
 
 @media (max-width: 1024px) {
   .lp-4-container {
+    /* margin-left: 140px; */
     flex-direction: column;
     gap: 60px;
     padding: 0 40px;
